# cmake-conan

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  appveyor.yml  conan.cmake  conan_provider.cmake  conan_support.cmake  conaninstall.cmake  conantools.cmake  main.cpp  md5.cpp  test_smoke.py  tests.py  tests_new.py
.github/workflows/: cmake_conan.yml
.travis/: install.sh  run.sh
example/: CMakeLists.txt  conanfile.txt  main.cpp
resources/subdir/subdir/: main.cpp
tests/: CMakeLists.txt  pytest.ini  test_smoke.py
tests/resources/autotools_dependency/: CMakeLists.txt  conanfile.txt
tests/resources/basic/: CMakeLists.txt  conanfile.txt  main.cpp
tests/resources/basic_cmake/: CMakeLists.txt  conanfile.txt
tests/resources/change_generators/duplicate_generator/: conanfile.py
tests/resources/change_generators/no_generator_py/: conanfile.py
tests/resources/change_generators/single_generator/: conanfile.py
tests/resources/cmake_module/: CMakeLists.txt
tests/resources/cmake_module_path/library_with_cmake_module_dir/: CMakeLists.txt  conanfile.txt
tests/resources/cmake_module_path/module_only/: CMakeLists.txt  conanfile.txt
tests/resources/configure/failure/: CMakeLists.txt
tests/resources/configure/success/: CMakeLists.txt
tests/resources/custom_config/profiles/: bar  foo
tests/resources/custom_profiles/: invalid_os
tests/resources/fake_boost_recipe/: conanfile.py
tests/resources/find_module/basic_module/: CMakeLists.txt
tests/resources/find_module/cmake_builtin_module/: CMakeLists.txt
tests/resources/find_module_builtin/: CMakeLists.txt
tests/resources/libbye/: conanfile.py
tests/resources/preserve_module_path/: CMakeLists.txt
tests/resources/preserve_module_path/modules/: CustomModule.cmake
tests/resources/recipes/bye/: conanfile.py
tests/resources/recipes/cmake-module-only/: conanfile.py
tests/resources/recipes/cmake-module-with-dependency/: conanfile.py
tests/resources/subdir/: CMakeLists.txt  conanfile.txt
tests/resources/subdir/subdir/: CMakeLists.txt
tests/resources/subdir2/: CMakeLists.txt  conanfile.txt
tests/resources/subdir2/subdir/: CMakeLists.txt  main.cpp
tests/resources/tool/: CMakeLists.txt  conanfile.txt
tests/resources/try_compile/: CMakeLists.txt  conanfile.txt
